---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    - Added a section to the Utility dialog where relevant blueprints can be stored on each subfactory
    - Added a live-updating list of module effects to the machine and beacon dialogs
    - Added the console command '/fp-shrinkwrap-interface' to reduce the size of the interface until it fits the screen
  Changes:
    - Changed the main interface shrinkwrap to now apply when resolution or scale changes
    - Extended the overload beacon detection to a couple more mods (Thanks ctgPi!)
    - Changed the matrix settings dialog to show items in natural sort order (Thanks ctgPi!)
    - Moved both preferences from the production header to the preferences dialog
    - Removed the background dimmer and click-blocker around the main interface
    - Simplified indentation visuals for folded out subfloors
    - Updated the GUI in a few other minor ways
  Bugfixes:
    - Fixed a rare bug when repairing subfactories with invalid subfloors

---------------------------------------------------------------------------------------------------
Version: 1.1.64
Date: 30. 04. 2023
  Features:
    - Added the ability to shift subfactories and recipes by 5 spots
  Changes:
    - Limited beacon amount to 1 when using the mod with Space Exploration
    - Changed exact machine limits to default to being enabled
  Bugfixes:
    - Fixed space science not showing up at all

---------------------------------------------------------------------------------------------------
Version: 1.1.63
Date: 29. 04. 2023
  Features:
    - Subfactories can now be duplicated from the archive, placing them into the main list
  Changes:
    - Redesigned the subfactory info box slightly
    - Made the game pause button more obvious in the UI
    - Removed the amount indication on machines and fuels in the machine dialog
  Bugfixes: