@@ -4,6 +4,7 @@ Date: 00. 00. 0000
   Features:
     - Added a section to the Utility dialog where relevant blueprints can be stored on each subfactory
     - Added a live-updating list of module effects to the machine and beacon dialogs
+    - Made it so all items of the same kind are highlighted when hovering over one in the compact dialog
     - Added the console command '/fp-shrinkwrap-interface' to reduce the size of the interface until it fits the screen
   Changes:
     - Changed the main interface shrinkwrap to now apply when resolution or scale changes
